# gestion-projets

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.claude/commands/: ajout_facture.md  reinit.md  situations.md
api/: server.py
data/bons_paiement/: bon_FAC-2026-001.txt  bon_FAC-2026-002.txt  bon_FAC-2026-003.txt
data/budget/: budget_global.csv  budget_lot_prestataire.csv  budget_prestataire.csv
data/fiche_navette/: navette_FAC-2026-001.txt  navette_FAC-2026-002.txt  navette_FAC-2026-003.txt
data/navettes_et_bons/: lot01 Isolation_thermique PlatrOMATIC.xlsx  lot01_Isolation_Thermique_PLAT001.xlsx  lot02_Isolation_Acoustique_REVE001.xlsx  lot03_Renovation_Chauffage_CHAU001.xlsx
data/navettes_et_bons/mails/: mail_FAC-2026-001.txt  mail_FAC-2026-002.txt  mail_FAC-2026-003.txt
data/prestataires/: prestataires.csv
data/tmp/: .current_session.json
data/vue_globale/: budget_20260422.xlsx  budget_20260424.xlsx  budget_20260426.xlsx  recap_20260424.txt  recap_20260426.txt
scripts/: generate_factures.py  generate_navette.py  generate_recap.py  process_situations.py
ui/: index.html
uml/: diagramme_classes.puml
